--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\"  && mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec \"npm test\""
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "6.2.2"
@@ -14,19 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.18.3",
-    "crypto-js": "3.1.9-1",
-    "express": "4.16.3",
-    "jsonwebtoken": "8.3.0",
-    "lodash": "4.17.10",
-    "mongodb": "3.1.4",
-    "mongoose": "5.2.13",
-    "validator": "10.7.1"
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.6",
+    "express": "^4.14.0",
+    "hoek": "5.0.4",
+    "jsonwebtoken": "^7.1.9",
+    "lodash": "^4.15.0",
+    "mongodb": "^2.2.5",
+    "mongoose": "^4.5.9",
+    "validator": "^5.6.0"
   },
   "devDependencies": {
-    "expect": "23.5.0",
-    "mocha": "5.2.0",
-    "nodemon": "1.18.4",
-    "supertest": "3.3.0"
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "supertest": "^2.0.0"
   }
 }
